# fastapi-crud-auth-boilerplate

./: .gitignore  README.md  pyproject.toml
api/: main.py
app/: main.py
app/api/: authentication.py  healthcheck.py
tests/: conftest.py  test_api.py  test_app.py  test_healthcheck.py
